# skupper-router

./: .clang-format  .clangd  .dockerignore  .gitignore  .packit.yaml  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.adoc  Cargo.toml  Containerfile  Doxyfile  LICENSE  README.adoc  RELEASE.adoc  config.sh  pom.xml  requirements-dev.txt  run.py.in  skupper-router.spec  skupper-router.spec.rpkg
python/: CMakeLists.txt  pyproject.toml.in  setup.py.in  skupper_router_site.py.in
python/qpid_dispatch/management/: client.py  error.py  qdrouter.json
python/qpid_dispatch_internal/: dispatch.py
python/qpid_dispatch_internal/display_name/: display_name.py
python/qpid_dispatch_internal/management/: agent.py  config.py  qdrouter.py  schema.py
python/qpid_dispatch_internal/policy/: policy_local.py  policy_util.py
python/qpid_dispatch_internal/router/: engine.py  node.py
python/skupper_router/: _skupper_router_site.py.in
python/skupper_router_internal/: dispatch.py  dispatch.pyi
router/: CMakeLists.txt
router/src/: main.c  panic.c
src/: .clang-format  CMakeLists.txt  alloc_pool.c  amqp.c  aprintf.h  bitmask.c  buffer.c  buffer_field_api.h  compose.c  config.h.in  connection_counters.c  connection_manager.c  container.c  cutthrough_utils.c  delivery_state.c  discriminator.c  dispatch.c  dispatch_private.h  entity.c  entity.h  entity_cache.c  entity_cache.h  error.c  failoverlist.c  hash.c  http-libwebsockets.c  http.h  iterator.c  log.c  log_private.h  message.c  message_private.h  parse.c  parse_tree.c  parse_tree.h  platform.c  policy.c  policy.h  policy_internal.h  protocol_log.c  (+21 more)
src/adaptors/: adaptor_buffer.c  adaptor_buffer.h  adaptor_common.c  adaptor_common.h  adaptor_listener.c  adaptor_listener.h  adaptor_tls.c  adaptor_tls.h  http_common.c  http_common.h  legacy_tls.c  legacy_tls.h  reference_adaptor.c  tcp_adaptor.c  tcp_adaptor.h  test_adaptor.c
src/adaptors/amqp/: amqp_adaptor.c  (+15 more)
src/observers/: http1_observer.c  http2_observer.c  private.h  protocol_observer.c  tcp_observer.c
src/posix/: symbolization.c  symbolization_none.c  threading.c
src/router_core/: DESIGN  address_watch.c  address_watch.h  agent.c  agent_address.c  agent_address.h  agent_config_address.c  agent_config_address.h  agent_config_auto_link.c  agent_config_auto_link.h  agent_connection.c  agent_connection.h  agent_link.c  agent_link.h  agent_router.c  agent_router.h  agent_router_metrics.c  agent_router_metrics.h  agent_router_stats.c  agent_router_stats.h  connections.c  core_client_api.c  core_client_api.h  core_events.c  core_events.h  core_link_endpoint.c  core_link_endpoint.h  core_timer.c  delivery.c  delivery.h  error.c  forwarder.c  forwarder.h  management_agent.c  module.h  route_control.c  route_control.h  route_tables.c  router_core.c  router_core_private.h  (+3 more)
src/tls/: README.txt  display_name.c  private.h  tls.c  tls_amqp.c  tls_raw.c
src/transport_modules/: reference.c
tests/: .coveragerc  CMakeLists.txt  TCP_echo_client.py  TCP_echo_server.py  __init__.py  adaptor_buffer_test.c  alloc_test.c  buffer_test.c  clogger.c  compose_test.c  core_timer_test.c  failoverlist_test.c  field_test.c  friendship_pb2.py  friendship_pb2_grpc.py  friendship_server.py  hash_test.c  http1_relay.c  http1_tests.py  http2_decoder_tests.c  http2_server.py  http2_slow_q2_server.py  hyperh2_server.py  interrouter_msg.py  lsan.supp  message_test.c  message_tests.py  mypy.ini.in  parse_test.c  platform_test.c  policy_test.c  proton_utils_tests.c  pylintrc  pytest.ini  python-checker.sh.in  router_engine_test.py  router_policy_test.py  run_unit_tests.c  run_unit_tests_size.c  setup.cfg.in  (+97 more)
tests/c_benchmarks/: CMakeLists.txt  Socket.cpp  SocketException.cpp  TCPServerSocket.cpp  TCPSocket.cpp  TCPSocket.hpp  bm_parse_tree.cpp  bm_router_initialization.cpp  bm_tcp_adapter.cpp  echo_server.hpp
tests/c_unittests/: CMakeLists.txt  c_unittests_main.cpp  doctest.h  helpers.cpp  helpers.hpp  minimal_trace.conf  python_utils.hpp  qdr_doctest.hpp  static_accessors_server_c.c  test_alloc_pool.cpp  test_amqp.cpp  test_connection_manager_static.cpp  test_http_listener_connector.cpp  test_listener_startup.cpp  test_server.cpp  test_terminus.cpp
tests/config-0-empty/: qdrouterd-empty.conf
tests/config-1/: A.conf  A.json
tests/config-2/: A.conf  B-ssl.conf.in  B.conf  ca-certificate.pem  client-private-key.pem  gencerts.sh  server-private-key.pem
tests/config-2-broker/: A.conf  B.conf
tests/config-2-edge/: INTB.conf
tests/config-3-linear/: A.conf  B.conf  C.conf  topology.txt
tests/config-6/: A.conf  B.conf  C.conf  D.conf  X.conf  Y.conf  topology.txt
tests/config-console/: A.conf
tests/cpp/: CMakeLists.txt
tests/cpp-stub/: addr_any.h  cpp_stub.h  elfio.hpp
tests/displayname_files/: profile_names1.json  profile_names2.json
tests/fuzz/: CMakeLists.txt  Containerfile  README.md  StandaloneFuzzTargetInit.c  StandaloneFuzzTargetMain.c  build.sh  fuzz_http1_request_decoder.c  fuzz_http1_response_decoder.c  fuzz_http2_decoder.c  fuzz_http2_decoder.h
tests/http1-data/: index.html
tests/management_test/: entity.py  qdrouter.py  schema.py
tests/mock/: __init__.py  dispatch.py
tests/nginx-configs/: expandvars.conf
tests/policy-1/: test-policy-conf-includes-folder.conf.in
tests/policy-2/: test-router-with-policy.json.in
tests/policy-3/: test-sender-receiver-limits.json
tests/proxy/: irlproxy.conf  note  r1w4.conf  r2w4.conf
tests/ssl_certs/: README  bad-ca-certificate.pem  bad-ca-private-key.pem  ca-certificate.pem  ca-private-key.pem  ca2-certificate.pem  ca2-private-key.pem  chained.pem  client-certificate.pem  client-private-key-no-pass.pem  client-private-key.pem  client2-certificate.pem  client2-private-key-no-pass.pem  client2-private-key.pem  gencerts.sh  gencerts_openssl.sh  server-certificate.pem  server-private-key-no-pass.pem  server-private-key.pem  server2-certificate.pem  server2-private-key-no-pass.pem  server2-private-key.pem  v3_ca.ext
tests/testcontainers/: README.adoc  docker.rs  test_h2spec.rs  test_skrouterd_sanity.rs  utils.rs
(+919 files in other folders)
